# ai_base

./: .env.template  .gitignore  ARCHITECTURE.md  README.md  activate-react-env.bat  app_v3.py  check_python.py  genesis.py  main.py  manage-env.bat  package-lock.json  project-manager.bat  pyproject.toml  react_ui_v3.html  setup-environment.bat  setup-v1.bat  setup.bat  setup.ps1  start_backend.bat  start_backend.ps1
apps/: __init__.py
apps/data_quality/: __init__.py  plugin.py  profiler.py  spark_generator.py
apps/web_testing/: __init__.py  crawler.py  plugin.py  test_generator.py
code_analyzer/: ask_google.py  code_analyzer.py  generate_tests.py  test_generation_prompt.md
config/: README.md  craco.config.js  pyproject.toml  tsconfig.json  tsconfig.template.json
core/: __init__.py  llm.py  plugins.py
databases/: README.md
docs/: PLUGIN_DEVELOPMENT_GUIDE.md  QUICK_START_GUIDE.md  README.md
docs/examples/: README.md
frontend/: .gitignore  DEVELOPMENT.md  WEBPACK_FIX.md  package-lock.json
scripts/: activate-react-env.bat  activate-react-env.ps1  test-webpack-fix.bat
shared/requirements/: base.txt  dev.txt  prod.txt
utils/: EXAMPLES_README.md  EXTRACTOR_USAGE_GUIDE.md  cli_examples.py  code_extractor.py  examples_overview.py  extractor_example.py  show_results.py  simple_extractor_example.py
v1/: .gitignore  README.md  activate-react-env.ps1  test-webpack-fix.bat
v1/backend/: README.md  requirements.txt  setup.bat  start_backend.bat  start_dev_server.py  test_health_system.py
v1/backend/app/: __init__.py  main.py
v1/backend/app/api/: __init__.py  health.py
v1/backend/app/core/: __init__.py  config.py  database.py
v1/backend/app/models/: __init__.py
v1/frontend/: .env.backup  README.md  craco.config.js  package-lock.json  package.json  setup.bat  start_dev.ps1  start_frontend.bat  start_frontend.ps1
v1/frontend/src/: App.css  App.tsx  index.css
v1/frontend/src/components/: ChartsGrid.tsx  Dashboard.tsx  LoadingSpinner.tsx  Navbar.tsx  NotificationToast.tsx  Sidebar.tsx  StatCard.tsx  StatsGrid.tsx
v1/frontend/src/components/sections/: DashboardOverview.tsx  DataQualityApp.tsx  HealthStatus.tsx  LLMProviderManagement.tsx  PluginManagement.tsx  WebTestingApp.tsx
v1/frontend/src/contexts/: NotificationContext.tsx  ThemeContext.tsx
v1/frontend/src/services/: api.ts
v1/frontend/src/types/: index.ts
